--- a/public/css/app-styles.css
+++ b/public/css/app-styles.css
@@ -22,6 +22,17 @@ blockquote .frase{
 .invalid-data {
   width: 100%;
   margin-top: 0.25rem;
-  font-size: 80%;
+  font-size: 90%;
   color: red;
+}
+
+.invalid-data-white {
+  width: 100%;
+  margin-top: 0.25rem;
+  font-size: 90%;
+  color: white;
+}
+
+.brand-text {
+ padding-left: 1px !important;
 }
