--- a/public/css/Vue-App.css
+++ b/public/css/Vue-App.css
@@ -1,6 +1,7 @@
-.active {
+/*.active {
     background-color: #20A8D8 !important;
 }
+*/
 
 .btn-xs, .btn-group-xs > .btn {
     padding: 0.4rem ;
@@ -33,7 +34,13 @@ label {
 
 .form-control {
     padding: 0.15rem 0.75rem;
-    font-size: 11px !important;
+    font-size: 13px !important;
+}
+ .campo-form{
+       line-height: 20px;
+ }
+ form .form-group {
+    margin-bottom: auto !important;
 }
 
 th {
@@ -91,6 +98,24 @@ ol li, ul li, dl li {
    color: yellow !important;
 }
 
+.my-vdatetime{
+     border: 1px solid #666EE8 !important;
+         border-radius: 0.25rem;
+         padding-left: 10px;
+}
+
+
+.theme-orange .vdatetime-popup__header,
+.theme-orange .vdatetime-calendar__month__day--selected > span > span,
+.theme-orange .vdatetime-calendar__month__day--selected:hover > span > span {
+  background: #FF9800;
+}
+
+.theme-orange .vdatetime-year-picker__item--selected,
+.theme-orange .vdatetime-time-picker__item--selected,
+.theme-orange .vdatetime-popup__actions__button {
+  color: #ff9800;
+}
 
 /*
  * Note that this is toastr v2.1.3, the "latest" version in url has no more maintenance,
