--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -31,8 +31,10 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-  --font-family-monospace: "Quicksand", Georgia, "Times New Roman", Times, serif; }
+  --font-family-sans-serif: "Open Sans", "-apple-system", "BlinkMacSystemFont", "Segoe UI", "Roboto", "Helvetica Neue", "Arial", "sans-serif";
+  --font-family-monospace: "Quicksand", "Georgia", "Times New Roman", "Times", "serif"; }
+
+
 
 @media print {
   *,
@@ -103,7 +105,7 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 
 body {
   margin: 0;
-  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family:  "Open Sans", "-apple-system", "BlinkMacSystemFont", "Segoe UI", "Roboto", "Helvetica Neue", Arial, "sans-serif";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.45;
