--- a/public/css/Vue-App.css
+++ b/public/css/Vue-App.css
@@ -11,18 +11,6 @@
 }
 
 
-.card {
-    margin-bottom: 1.5rem !important;
-}
-.card-body {
-    padding: 0.5rem 1rem !important;
-}
-.card-footer {
-    padding: 0.2rem !important;
-}
-.card-header {
-    padding: 0.5rem !important;
-}
 
 label {
     display: inline-block;
@@ -152,6 +140,26 @@ ol li, ul li, dl li {
 
 
 
+
+.card {
+    margin-bottom: 1.5rem !important;
+}
+.card-body {
+    padding: 0.5rem 1rem !important;
+}
+.card-footer {
+    padding: 0.2rem !important;
+}
+.card-header {
+    padding: 0.5rem !important;
+}
+
+.card-header > h4 {
+      color: white !important;
+}
+.card-header-bg{
+    background-color: #F78A00 !important;
+}
 
 /*
  * Note that this is toastr v2.1.3, the "latest" version in url has no more maintenance,
